# Wormeme

./: README.md
evm/: bun.lockb  package.json
evm/contracts/: wormem.sol
evm/contracts/wormhole/: getters.sol  messages.sol  setters.sol  state.sol  structs.sol
evm/lib/wormhole-solidity-sdk/: foundry.toml
svm/: Anchor.toml
svm/programs/svm/: Cargo.toml
svm/programs/svm/src/: lib.rs
svm/programs/wormeme_vault/: Cargo.toml
svm/programs/wormeme_vault/src/: lib.rs
